--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/themes.scss",
-              "src/styles.scss"
+              "src/styles/themes.scss",
+              "src/styles/styles.scss"
             ],
             "scripts": []
           },
