--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,11 @@ node_js:
 - stable
 - '6'
 - '4'
+branches:
+  only:
+    - master
+before_script:
+  - npm install -g @angular/cli
+script:
+  - npm install
+  - npm run build
