--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 language: node_js
 node_js:
 - stable
@@ -5,7 +13,9 @@ branches:
   only:
     - master
 before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   - npm install -g @angular/cli
 script:
   - npm install
-  - npm run build
+  - npm test
