--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,5 @@
-sudo: required
-dist: trusty
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 language: node_js
 node_js:
 - stable
@@ -15,7 +9,9 @@ branches:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g @angular/cli
+  - sleep 3 # give xvfb some time to start
+  - rackup  # start a Web server
+  - sleep 3 # give Web server some time to bind to sockets, etc
 script:
   - npm install
   - npm test
