--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
-addons:
-  chrome: stable
+sudo: required
 language: node_js
 node_js:
-- stable
+  - stable
 branches:
   only:
     - master
+addons:
+  chrome: stable
+services:
+  - xvfb
+before_install:
+  - export DISPLAY=:99.0
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3 # give xvfb some time to start
   - rackup  # start a Web server
   - sleep 3 # give Web server some time to bind to sockets, etc
-script:
+  - npm install -g @angular/cli
+  - npm install -g karma karma-chrome-launcher
   - npm install
-  - npm test
+script:
+  - ng test --karma-config karma.container.conf.js
