--- a/angular.json
+++ b/angular.json
@@ -93,8 +93,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles/themes.scss",
+              "src/styles/styles.scss"
             ],
             "scripts": []
           }
