--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build --prod --build-optimizer",
-    "test": "ng test",
+    "test": "ng test --karma-config karma.container.conf.js",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
