ProjectHistory module set up

--- a/src/assets/json/project-data.json
+++ b/src/assets/json/project-data.json
@@ -8,8 +8,7 @@
       "We found a free VPN solution, however many of the features we currently required (static IP assignment, IP routing, Firewall) were missing in this solution and would need to be developed by myself.  By using my networking education and experience, I was able to develop/implement those features, reducing our VPN costs to zero.",
       "Regarding the industrial computer, I used my IoT education and experience to recompile the programs we developed and maintained to work with alternative CPUs (e.g. Raspberry Pi uses an ARM-type CPU).  This flexibility allowed us to chose an alternative computer model that was nearly half the other model’s price."
     ],
-    "image": "universal-controls.jpg",
-    "src": "universal-controls.jpg",
+    "image": "assets/media/universal-controls.jpg",
     "links": null
   },
   {
@@ -21,20 +20,19 @@
       "My tasks as the Systems Engineer: help analyze system requirements and work with customer/team to resolve issues, research current/available technological solutions, create proof-of-concept prototype, give preliminary design review, get customer approval for the comprehensive design of the system, develop software and configure the OS (Debian) to interface system and sensor modules (IMU, LIDAR, GPS, IR camera), filter raw GPS data using PPK to increase accuracy, deliver final report to customer, and present our system at the Senior Design Expo.",
       "Thanks to our hard work and education, we were able to deliver a system that satisfied all of the client’s requirements, and we gained experience as engineers working in industry."
     ],
-    "image": "design-center-co.jpg",
-    "src": "design-center-co.jpg",
+    "image": "assets/media/design-center-co.jpg",
     "links": [
       {
-        "text": "Article describing project",
-        "linkURL": "https://www.colorado.edu/mechanical/2019/04/22/siemens-gamesa-partners-cu-students-develop-drone-based-monitoring-system-wind-turbines"
+        "title": "Design Center Colorado",
+        "url": "https://www.colorado.edu/designcenter"
       },
       {
-        "text": "Design Center Colorado",
-        "linkURL": "https://www.colorado.edu/designcenter"
+        "title": "Siemens Gamesa",
+        "url": "https://www.siemensgamesa.com"
       },
       {
-        "text": "Siemens Gamesa homepage",
-        "linkURL": "https://www.siemensgamesa.com"
+        "title": "Magazine Article",
+        "url": "https://www.colorado.edu/mechanical/2019/04/22/siemens-gamesa-partners-cu-students-develop-drone-based-monitoring-system-wind-turbines"
       }
     ]
   },
@@ -48,8 +46,7 @@
       "By collaborating with each other and having a clear assignment of duties, our group was able to deliver the software product and all the required deliverables on time."
     ],
     "links": null,
-    "image": "cu-boulder.jpeg",
-    "src": "cu-boulder.jpeg"
+    "image": "assets/media/cu-boulder.jpeg"
   },
   {
     "title": "Software Development Project",
@@ -61,7 +58,6 @@
       "Deliverables included a web application that: created a new database document for each user, supported user login sessions, encrypted the user’s password using the Blowfish algorithm, and provided tools allowing users to manage their database document inside the web browser."
     ],
     "links": null,
-    "image": "cu-boulder.jpeg",
-    "src": "cu-boulder.jpeg"
+    "image": "assets/media/cu-boulder.jpeg"
   }
 ]
